--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -2,8 +2,8 @@
 .overlay {
   background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 .modalTitle {
   text-align: center;
