--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -1,14 +1,16 @@
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 100%;
+  width: 90%;
+  margin: auto;
 }
 
 td,
 th {
   border: 1px solid #dddddd;
   text-align: left;
-  padding: 8px;
+  padding: 0.05rem;
+  text-align: center;
 }
 
 tr:nth-child(even) {
